some fixes on mobile

--- a/components/hero/style.module.scss
+++ b/components/hero/style.module.scss
@@ -174,9 +174,9 @@
   }
 
   @media (max-width: 455px) {
-    height: 180vh;
     .heading {
       left: 0;
+      padding: 2rem 0;
 
       h1{
         padding: 2rem 0;
